remove fixed width from divebox-header to fix big horizontal scroll problem

--- a/app/assets/stylesheets/models/_users.scss
+++ b/app/assets/stylesheets/models/_users.scss
@@ -78,9 +78,7 @@
 }
 
 .dive-card {
-  width: 250px;
   height: 145px;
-
 }
 
 .dive-navigation-box {
